--- a/src/main/docker/postgresql.yml
+++ b/src/main/docker/postgresql.yml
@@ -13,3 +13,16 @@ services:
     # remove the "127.0.0.1:" prefix
     ports:
       - 127.0.0.1:5332:5432
+
+  annual_dec_jh-posg-User-joined:
+    image: postgres:14.5
+    # volumes:
+    #   - ~/volumes/jhipster/annual_dec_jh/postgresql/:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=annual_dec_jh
+      - POSTGRES_PASSWORD=
+      - POSTGRES_HOST_AUTH_METHOD=trust
+    # If you want to expose these ports outside your dev PC,
+    # remove the "127.0.0.1:" prefix
+    ports:
+      - 127.0.0.1:5333:5432
